tests/snapshots/imports__imports__indented_first_import_fails.snap
---
source: tests/imports.rs
expression: result

---
Token not at line start.

error: 
  ┌─ sample:2:3
  │
2 │   import Impl.Test exposing (hello)
  │   ^^^^^^


